--- a/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetFinishGoodRecipeEdit.cshtml
@@ -19,12 +19,19 @@
 
         @*<td style="width:15%"><input type="text" placeholder="Qty" name="quantity" id="txtProductQty" class="form-control form-control-sm" dataval="@info.FinishGoodProductName" /> </td>*@
         <td style="width:15%"><b>@info.FinishGoodProductName</b></td>
-        <td style="width:18%">Product Qty</td>
-        <td style="width:20%"><b>@info.FGRQty</b></td>
-        <td style="width:13%">Product Unit</td>
-        <td style="width:20%"><b>@info.FGRUnit</b></td>
-        <td style="width:13%">Receipe Status</td>
-        <td style="width:20%"><b>@info.Status</b></td>
+        <td style="width:13%">Product Qty</td>
+        <td style="width:5%"><b>@info.FGRQty</b></td>
+        <td style="width:10%">Product Unit</td>
+        <td style="width:6%"><b>@info.FGRUnit</b></td>
+        <td style="width:10%">Receipe Status</td>
+        <td style="width:20%">
+            @info.Status
+
+                <select class="form-control form-control-sm" id="ddlStatus">
+                    <option value="Active">Active</option>
+                    <option value="InActive">InActive</option>
+                </select>
+            </td>
     </tr>
     }
 </table>
@@ -70,11 +77,14 @@
         });
     })
 
+    var ddlStatus = $("#ddlStatus");
     $("#btnSubmit").click(function (e) {
             debugger
         e.preventDefault();
         var finishGoodRecipeInfoId = $("#finishGoodRecipeInfoId").attr("data-val-finishGoodRecipeInfoId");
- 
+
+        //var ddlStatus = $("#ddlStatus").attr("data-val-ddlStatus");
+    
         //console.log("finishGoodProductId :" + JSON.stringify(finishGoodProductId));
         
             if (true === true) {
@@ -82,9 +92,10 @@
                 bootbox.confirm("Are you sure you want to Update this Recipe", function (result) {
                     if (result) {
                         debugger;
+                        console.log(ddlStatus.val());
                         //disable("#btnSubmit");
                         //getTargetItemAndItemTypeAndWarehouse();
-                        var info = { FGRId: TryParseInt(finishGoodRecipeInfoId,0)};
+                        var info = { FGRId: TryParseInt(finishGoodRecipeInfoId, 0), Status: ddlStatus.val()};
 
                         var details = [];
                        // details.length = 0;
@@ -102,6 +113,7 @@
                         console.log('Detail');
                         console.log(details);
                         var data = JSON.stringify({ info: info, details: details });
+                        alert(data);   
                         //return;
                         $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/SaveFinishGoodRecipe', data, getToken())).then(function (res, status) {
                             if (res === true) {
