--- a/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetRawMaterialStockList.cshtml
@@ -13,6 +13,7 @@
             <th style="vertical-align:middle">Raw Material Name</th>
             <th style="vertical-align:middle">Quantity</th>
             <th style="vertical-align:middle">Unit</th>
+            <th style="vertical-align:middle">ExpireDate</th>
             <th style="vertical-align:middle">Action</th>
         </tr>
     </thead>
@@ -26,6 +27,7 @@
                 <td class="text-center">@item.RawMaterialName</td>
                 <td class="text-center">@item.Quantity</td>
                 <td class="text-center">@item.Unit</td>
+                <td class="text-center">@item.ExpireDate</td>
 
                 <td class="text-center">
                    
@@ -33,7 +35,7 @@
                         <i class="fas fa-eye"></i>
                     </a>
                    
-                    <a href="#" class="btn btn-outline-warning data-item-edit" title="Edit" data-edit-item="@item.RawMaterialStockId" style="line-height:1">
+                    <a href="#" class="btn btn-outline-warning data-item-edit hide" title="Edit" data-edit-item="@item.RawMaterialStockId" style="line-height:1">
                         <i class="fas fa-pen"></i>
                     </a>
                    
